--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -8,7 +8,6 @@ main{
 .catalog-section{
     background-color: yellow;
     min-width: fit-content;
-    width: 20%;
     border-radius: 10px;
     margin-top: 5px;
     padding-bottom: 20px;
@@ -56,6 +55,7 @@ main{
 
 .product-item > img{
     margin: auto;
+    max-width: 100%;
     max-height: 150px;
 }
 .product-item > p{
